# lite6xlerobi

./: CMakeLists.txt  README.md  lite6_fake_bringup.sh  package.xml
config/: lite6_controllers.yaml  lite6_real_controllers.yaml
config/link_inertial/: auto_lite6_inertial.yaml  lite6_default_inertial.yaml
launch/: launch_fake_lite6.launch.py  launch_lite6_universal.launch.py
rviz/: standard.rviz  standart.rviz
scripts/: bootstrap_inertial.sh  bringup_prepare.sh  launch_fake_lite6.launch.py  republish_description.py  test_authentic_gripper.py  test_real_gripper.py
urdf/: my_lite6_with_gripper.urdf.xacro
urdf/gripper/: authentic_lite6_gripper.urdf.xacro
urdf/lite6_fake/: lite6_fake.urdf  lite6_fake_wrapper.urdf.xacro  lite6_fake_wrapper.urdf.xacro.bak  my_lite6_with_gripper.urdf.xacro
urdf/lite6_real/: lite6_real_custom.urdf.xacro  lite6_real_wrapper.urdf.xacro
