<?xml version="1.0"?>
<package format="3">
  <name>lite6xlerobi</name>
  <version>0.1.0</version>
  <description>Minimaler Bringup für xArm Lite6 (URDF → ros2_control → republish → RViz)</description>
  <maintainer email="you@example.com">pikachu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>xarm_description</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
